refactor: 대기 순위 로직을 서비스로 이동